src/objects/CurrencyHistory__c.object
<CustomObject>
    <fields>
        <fullName>AUD__c</fullName>
        <label>AUD</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AllCurrencies__c</fullName>
        <label>All Currencies</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CAD__c</fullName>
        <label>CAD</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR__c</fullName>
        <label>EUR</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GBP__c</fullName>
        <label>GBP</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HKD__c</fullName>
        <label>HKD</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IDR__c</fullName>
        <label>IDR</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INR__c</fullName>
        <label>INR</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JPY__c</fullName>
        <label>JPY</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KRW__c</fullName>
        <label>KRW</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MXN__c</fullName>
        <label>MXN</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MYR__c</fullName>
        <label>MYR</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NZD__c</fullName>
        <label>NZD</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PHP__c</fullName>
        <label>PHP</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLN__c</fullName>
        <label>PLN</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RUB__c</fullName>
        <label>RUB</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SGD__c</fullName>
        <label>SGD</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>THB__c</fullName>
        <label>THB</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <label>Currency History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>AUD__c</columns>
        <columns>CAD__c</columns>
        <columns>EUR__c</columns>
        <columns>GBP__c</columns>
        <columns>NZD__c</columns>
        <columns>PLN__c</columns>
        <columns>SGD__c</columns>
        <columns>IDR__c</columns>
        <columns>INR__c</columns>
        <columns>MXN__c</columns>
        <columns>PHP__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CH-{0000}</displayFormat>
        <label>Currency History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Currency History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>